--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
             <script src="~/js/PlayerSelect.js"></script>
+            <script src="~/lib/jquery-ui/jquery-ui.js"></script>
         </environment>
         <environment exclude="Development">
             <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -36,6 +37,7 @@
             </script>
             <script src="~/js/PlayerSelect.js"></script>
             <script src="~/js/site.js" asp-append-version="true"></script>
+            <script src="~/lib/jquery-ui/jquery-ui.js"></script>
         </environment>
 
         @RenderSection("Scripts", required: false)
